refactoring - remove router id

--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -6,7 +6,7 @@
     <div class="main">
         <mat-accordion>
             <mat-expansion-panel class="accordion">
-                <mat-expansion-panel-header [routerLink]="['/eval/', studentId]">
+                <mat-expansion-panel-header [routerLink]="['/eval']">
                     <mat-panel-title i18n="Title | area de avaliação">
                         DADOS COMPLEMENTARES
                     </mat-panel-title>
@@ -14,7 +14,7 @@
             </mat-expansion-panel>
 
             <mat-expansion-panel>
-                <mat-expansion-panel-header [routerLink]="['/anamn/', studentId]">
+                <mat-expansion-panel-header [routerLink]="['/anamn']">
                     <mat-panel-title i18n="Title | area de avaliação">
                         ANAMNESE
                     </mat-panel-title>
@@ -29,18 +29,18 @@
                 </mat-expansion-panel-header>
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/qpaf/', studentId]">
+                    <mat-card-header [routerLink]="['/qpaf/']">
                         <mat-card-subtitle>Questionário de prontidão para a actividade fisica (PAR-Q)
                         </mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/rdc/', studentId]">
+                    <mat-card-header [routerLink]="['/rdc/']">
                         <mat-card-subtitle>Risco de desenvolvimento de cardiopatia</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/rddc/', studentId]">
+                    <mat-card-header [routerLink]="['/rddc/']">
                         <mat-card-subtitle>Risco de desnvolvimento de dor na coluna</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
@@ -56,33 +56,33 @@
                 </mat-expansion-panel-header>
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/pdc/', studentId]">
+                    <mat-card-header [routerLink]="['/pdc/']">
                         <mat-card-subtitle i18n="Subtitle">Perímetros e Diâmetros Corporais</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/cc/', studentId]">
+                    <mat-card-header [routerLink]="['/cc/']">
                         <mat-card-subtitle i18n="Subtitle">Composição Corporal</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/imc/', studentId]">
+                    <mat-card-header [routerLink]="['/imc/']">
                         <mat-card-subtitle i18n="Subtitle">Indice Massa Corporal</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/ircq/', studentId]">
+                    <mat-card-header [routerLink]="['/ircq/']">
                         <mat-card-subtitle i18n="Subtitle">Indice Relação Cintura/Quadril</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/st/', studentId]">
+                    <mat-card-header [routerLink]="['/st/']">
                         <mat-card-subtitle i18n="Subtitle">Soma Tipo</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
             <mat-expansion-panel>
-                <mat-expansion-panel-header [routerLink]="['/cpost/', studentId]">
+                <mat-expansion-panel-header [routerLink]="['/cpost/']">
                     <mat-panel-title i18n="Title">
                         COMPONENTE POSTURAL
                     </mat-panel-title>
@@ -96,12 +96,12 @@
                 </mat-expansion-panel-header>
 
                 <mat-card>
-                    <mat-card-header [routerLink]="['/flex/', studentId]">
+                    <mat-card-header [routerLink]="['/flex/']">
                         <mat-card-subtitle i18n="Subtitle">Flexidade</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/frm/', studentId]">
+                    <mat-card-header [routerLink]="['/frm/']">
                         <mat-card-subtitle i18n="Subtitle">Força e Resistência muscular</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
@@ -113,22 +113,22 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/tcam/', studentId]">
+                    <mat-card-header [routerLink]="['/tcam/']">
                         <mat-card-subtitle i18n="Subtitle">Teste de Caminhada</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/tcorr/', studentId]">
+                    <mat-card-header [routerLink]="['/tcorr/']">
                         <mat-card-subtitle i18n="Subtitle">Teste de Corrida</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/tbic/', studentId]">
+                    <mat-card-header [routerLink]="['/tbic/']">
                         <mat-card-subtitle i18n="Subtitle">Teste de Bicicleta</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
                 <mat-card>
-                    <mat-card-header [routerLink]="['/toutros/', studentId]">
+                    <mat-card-header [routerLink]="['/toutros/']">
                         <mat-card-subtitle i18n="Subtitle">Outros Testes</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
