--- a/src/app/avaliation/risco/qpaf/qpaf.component.html
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.html
@@ -79,7 +79,7 @@
         <button mat-mini-fab color="primary" (click)="goBack()">
           <mat-icon>undo</mat-icon>
         </button>
-        <a mat-mini-fab color="primary" [routerLink]="['/rdc/', id]">
+        <a mat-mini-fab color="primary" [routerLink]="['/rdc']">
             <mat-icon>redo</mat-icon>
         </a>
     </div>
