--- a/src/app/avaliation/risco/rddc/rddc.component.html
+++ b/src/app/avaliation/risco/rddc/rddc.component.html
@@ -157,7 +157,7 @@
         <button mat-mini-fab color="primary" (click)="goBack()">
             <mat-icon>undo</mat-icon>
         </button>
-        <a mat-mini-fab color="primary" [routerLink]="['/avDash/', id]">
+        <a mat-mini-fab color="primary" [routerLink]="['/avDash']">
             <mat-icon>redo</mat-icon>
         </a>
 
