--- a/src/app/avaliation/componente-morfologica/pdc/pdc.component.html
+++ b/src/app/avaliation/componente-morfologica/pdc/pdc.component.html
@@ -130,7 +130,11 @@
                                         type="number" step="0.1">
                                 </td>
                             </tr>
-
+                            <tr>
+                                <td colspan="3">
+                                    <small class="advise-sm">*Todas as medidas são em centimetros</small>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
 
@@ -191,6 +195,11 @@
                                 <td *ngIf="pointer>=0">{{medidas[pointer].joelho}}</td>
                                 <td *ngIf="addDiam">
                                     <input name="joelho" #joelho="ngModel" [(ngModel)]="newDiametros.joelho" type="number" step="0.1" style="width: 60px;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="3">
+                                    <small class="advise-sm">*Todas as medidas são em centimetros</small>
                                 </td>
                             </tr>
                         </tbody>
@@ -277,6 +286,11 @@
                             <td *ngIf="pointer>=0">{{medidas[pointer].bracoc}}</td>
                             <td *ngIf="addOutros">
                                 <input name="bracoc" #bracoc="ngModel" [(ngModel)]="newOutros.bracoc" type="number" step="0.1" style="width: 60px;">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="3">
+                                <small class="advise-sm">*Todas as medidas são em centimetros</small>
                             </td>
                         </tr>
                     </tbody>
